--- a/package.json
+++ b/package.json
@@ -1,52 +1,26 @@
 {
-  "name": "ngx-typed-js-demo",
-  "version": "1.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "build:library": "ng build ngx-typed-js --prod; cp README.md dist/ngx-typed-js/README.md"
-  },
-  "private": true,
+  "name": "ngx-typed-js",
+  "version": "2.1.0",
   "dependencies": {
-    "@angular/animations": "~11.2.8",
-    "@angular/common": "~11.2.8",
-    "@angular/compiler": "~11.2.8",
-    "@angular/core": "~11.2.8",
-    "@angular/forms": "~11.2.8",
-    "@angular/platform-browser": "~11.2.8",
-    "@angular/platform-browser-dynamic": "~11.2.8",
-    "@angular/router": "~11.2.8",
-    "core-js": "^3.6.4",
-    "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
-    "typed.js": "^2.0.12",
-    "zone.js": "~0.10.2"
+    "typed.js": "^2.0.12"
   },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.7",
-    "@angular/cli": "~11.2.7",
-    "@angular/compiler-cli": "^11.2.8",
-    "@angular/language-service": "~11.2.8",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.0.0",
-    "protractor": "~7.0.0",
-    "ts-node": "^8.6.2",
-    "tsickle": "0.38.1",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
-  }
+  "peerDependencies": {
+    "@angular/common": ">=11.0.0",
+    "@angular/core": ">=11.0.0"
+  },
+  "license": "MIT",
+  "keywords": [
+    "typed",
+    "typed.js",
+    "typewriter"
+  ],
+  "main": "bundles/ngx-typed-js.umd.js",
+  "module": "fesm2015/ngx-typed-js.js",
+  "es2015": "fesm2015/ngx-typed-js.js",
+  "esm2015": "esm2015/ngx-typed-js.js",
+  "fesm2015": "fesm2015/ngx-typed-js.js",
+  "typings": "ngx-typed-js.d.ts",
+  "metadata": "ngx-typed-js.metadata.json",
+  "sideEffects": false
 }
